@@ -97,6 +97,7 @@ GEdiDlog.alias = Alias
 GEdiDlog.aliasTip = <html>A short name to describe the Gallery.<br>It will be used in Gallery Remote to display a short \
 				  name for the Gallery.<br>Leave empty to use the URL.</html>
 
+GEdiDlog.autoLogin = Automatically log in to this Gallery on startup
 
 #GeneralPa module
 GeneralPa.icon = General
@@ -265,6 +266,7 @@ URLPa.phpnGllryURL = PHPNuke Gallery URL:
 URLPa.glLoginURL = Geeklog login URL:
 URLPa.glGllryURL = Geeklog Gallery URL:
 URLPa.username = Username:
+URLPa.autoLogin = Automatically log in to this Gallery on startup
 
 
 #About module
